--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,8 @@ export(succotash)
 export(succotash_em)
 export(succotash_given_alpha)
 export(succotash_llike)
+export(succotash_llike_unif)
 export(succotash_summaries)
+export(succotash_unif_fixed)
 export(trim)
+export(uniform_succ_given_alpha)
