--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     ashr
 Suggests:
     cate (>= 1.0.4),
-    testthat
+    testthat,
+    flash
 RoxygenNote: 5.0.1
 URL: https://github.com/dcgerard/succotashr
 BugReports: https://github.com/dcgerard/succotashr/issues
