added t-likelihood functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,8 @@ export(succotash_llike)
 export(succotash_llike_unif)
 export(succotash_summaries)
 export(succotash_unif_fixed)
+export(t_succotash_llike_unif)
+export(t_succotash_unif_fixed)
+export(t_uniform_succ_given_alpha)
 export(trim)
 export(uniform_succ_given_alpha)
