try different way of having travis install bioconductor packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: r
 cache: packages
-bioc_packages: sva, limma
+
+install:
+  - ./travis-tool.sh install_bioc sva
+  - ./travis-tool.sh install_bioc limma
 
 env:
   global:
