removed flash from suggests and altered .travis.yml to try and install Rmosek beforehand

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ env:
 
 before_install:
   - Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva'))"
+  - Rscript -e 'install.packages("Rmosek")'
