can estimate k with num.sv and removed flash from suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Suggests:
     testthat,
     limma,
     flashr,
-    Rmosek
+    Rmosek,
+    sva
 Remotes: github::stephens999/ashr
 RoxygenNote: 5.0.1
 URL: https://github.com/dcgerard/succotashr
