start z and scale_val at null_mle and random locations, and return llike for final mle and null mle

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ LazyData: TRUE
 Imports:
     SQUAREM (>= 2014.8-1),
     ashr,
-    assertthat
+    assertthat,
+    vicar
 Suggests:
     cate (>= 1.0.4),
     testthat,
