--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Suggests:
     flashr,
     Rmosek,
     sva
-Remotes: github::stephens999/ashr
+Remotes: github::stephens999/ashr,
+         github::dcgerard/vicar
 RoxygenNote: 5.0.1
 URL: https://github.com/dcgerard/succotashr
 BugReports: https://github.com/dcgerard/succotashr/issues
